--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -91,7 +91,7 @@
     border-radius: 50%;
     margin: 0;
   }
-  h3 {
+  .author {
     font-weight: 700;
     font-style: italic;
     margin-bottom: 6px;
