--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -33,6 +33,34 @@
     }
   }
 }
+.scroll-to-top {
+  position: fixed;
+  bottom: -45px;
+  right: 0;
+  z-index: 9;
+  background: $color-gray-15;
+  border: none;
+  color: #fff;
+  padding: 9px 0;
+  width: 60px;
+  transition: background 0.2s, transform 0.3s;
+
+  &.visible {
+    transform: translateY(-45px);
+  }
+  &:hover {
+    cursor: pointer;
+    background: $color-gray-40;
+
+    i {
+      transform: translateY(-4px);
+    }
+  }
+  i {
+    font-size: 21px;
+    transition: transform 0.2s;
+  }
+}
 
 @media all and (min-width: $six-hundred) {
 
