--- a/sass/editor_style.scss
+++ b/sass/editor_style.scss
@@ -11,3 +11,43 @@
   font-family: $pt-serif;
   max-width: 700px;
 }
+
+// Gutenberg
+body {
+  font-size: 16px;
+  line-height: 1.5;
+  background: #fff;
+}
+.wp-block {
+  max-width: 733px;
+}
+.editor-post-title textarea {
+  @extend h1;
+  color: $color-gray-15;
+  outline: none;
+  padding: 19px;
+  font-family: $pt-serif;
+}
+.wp-block[data-align="wide"],
+.wp-block[data-align="full"] {
+  max-width: none;
+}
+.wp-block-quote.is-large {
+  padding-left: 0;
+  border-left: none;
+}
+.wp-block-embed {
+  margin: $baseline-height 0;
+}
+.has-small-font-size {
+  font-size: 12px;
+}
+.has-regular-font-size {
+  font-size: 16px;
+}
+.has-large-font-size {
+  font-size: 21px;
+}
+.has-extra-large-font-size {
+  font-size: 28px;
+}
