--- a/sass/editor_style.scss
+++ b/sass/editor_style.scss
@@ -1,5 +1,9 @@
 @import "variables";
-@import "base";
+
+
+//------------------------------------------------------
+// Classic editor styles
+//------------------------------------------------------
 
 .mce-content-body.wp-editor {
   margin: 0 auto;
@@ -12,11 +16,141 @@
   max-width: 700px;
 }
 
-// Gutenberg
+//------------------------------------------------------
+// Basic styles for Gutenberg
+//------------------------------------------------------
+
 body {
   font-size: 16px;
   line-height: 1.5;
-  background: #fff;
+  font-family: $pt-serif;
+  color: #000;
+  -webkit-font-smoothing: antialiased;
+}
+p {
+  margin: $baseline-height 0;
+}
+a {
+  color: $color-blue;
+  transition: color 0.25s;
+
+  &:link,
+  &:visited {
+    color: $color-blue;
+  }
+  &:hover,
+  &:active,
+  &:focus {
+    color: $color-blue-hover;
+    text-decoration: none;
+  }
+}
+h1,h2,h3,h4,h5,h6 {
+  font-family: $pt-serif;
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+}
+h1 {
+  @extend %twenty-eight-pixels;
+}
+h2 {
+  @extend %twenty-one-pixels;
+}
+h3, h4, h5, h6 {
+  font-size: 1em;
+  line-height: 1.5;
+}
+ul,
+ol {
+  font-size: 1em;
+  padding: 0;
+  margin: $baseline-height;
+
+  ul,ol {
+    margin: 0 $baseline-height;
+  }
+}
+ul ul,
+ol ol,
+ul ol,
+ol ul,
+li li {
+  font-size: 1em;
+}
+
+/* Markup styles */
+
+pre {
+  word-wrap: break-word;
+  background: $color-gray-95;
+  white-space: pre-wrap;
+  padding: $baseline-height / 2;
+}
+code {
+  background: $color-gray-95;
+  padding: 0 $baseline-height / 4;
+}
+blockquote {
+  margin: $baseline-height $baseline-height $baseline-height 0;
+  padding-left: $baseline-height;
+  border-left: solid 3px #000;
+
+  cite {
+    display: block;
+    text-align: right;
+  }
+}
+hr {
+  margin: $baseline-height 0;
+}
+/* Table styles */
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  margin: $baseline-height 0;
+}
+td,
+th {
+  padding: $baseline-height / 2;
+  border: solid 1px $color-gray-40;
+}
+
+/* Images */
+
+.alignleft {
+  float: left;
+  margin: 0 $baseline-height $baseline-height 0;
+}
+.alignright {
+  float: right;
+  margin: 0 0 $baseline-height $baseline-height;
+}
+.aligncenter {
+  text-align: center;
+  margin: $baseline-height auto;
+  display: block;
+}
+.alignnone {
+  margin: $baseline-height 0;
+}
+.alignright,
+.alignleft,
+.aligncenter,
+.alignnone,
+.size-auto,
+.size-full,
+.size-large,
+.size-medium,
+.size-thumbnail {
+  max-width: 100%;
+  height: auto;
+}
+.wp-caption-text,
+.gallery-caption {
+  @extend %twelve-pixels;
+  font-family: $pt-sans;
+  color: $color-gray-40;
 }
 .wp-block {
   max-width: 733px;
