--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -184,6 +184,10 @@
   background: none;
 }
 
+.last-updated {
+  font-style: italic;
+}
+
 @media all and (min-width: $five-hundred) {
 
   .post-title {
