--- a/style.css
+++ b/style.css
@@ -2374,14 +2374,19 @@ a img {
 }
 .layout-double .double .featured-image > img,
 .layout-double .double .featured-image > a > img,
+.layout-double .double .featured-image .fvp-dynamic.post-thumbnail > img,
 .layout-rows .rows .featured-image > img,
 .layout-rows .rows .featured-image > a > img,
+.layout-rows .rows .featured-image .fvp-dynamic.post-thumbnail > img,
 .layout-rows-excerpt .rows-excerpt .featured-image > img,
 .layout-rows-excerpt .rows-excerpt .featured-image > a > img,
+.layout-rows-excerpt .rows-excerpt .featured-image .fvp-dynamic.post-thumbnail > img,
 .widget_ct_mission_news_post_list .style-2 .featured-image > img,
 .widget_ct_mission_news_post_list .style-2 .featured-image > a > img,
+.widget_ct_mission_news_post_list .style-2 .featured-image .fvp-dynamic.post-thumbnail > img,
 .more-from-category .featured-image > img,
-.more-from-category .featured-image > a > img {
+.more-from-category .featured-image > a > img,
+.more-from-category .featured-image .fvp-dynamic.post-thumbnail > img {
   position: absolute;
   left: 0;
   height: 100%;
@@ -2390,14 +2395,19 @@ a img {
 }
 .layout-double .double .featured-image > img.no-object-fit,
 .layout-double .double .featured-image > a > img.no-object-fit,
+.layout-double .double .featured-image .fvp-dynamic.post-thumbnail > img.no-object-fit,
 .layout-rows .rows .featured-image > img.no-object-fit,
 .layout-rows .rows .featured-image > a > img.no-object-fit,
+.layout-rows .rows .featured-image .fvp-dynamic.post-thumbnail > img.no-object-fit,
 .layout-rows-excerpt .rows-excerpt .featured-image > img.no-object-fit,
 .layout-rows-excerpt .rows-excerpt .featured-image > a > img.no-object-fit,
+.layout-rows-excerpt .rows-excerpt .featured-image .fvp-dynamic.post-thumbnail > img.no-object-fit,
 .widget_ct_mission_news_post_list .style-2 .featured-image > img.no-object-fit,
 .widget_ct_mission_news_post_list .style-2 .featured-image > a > img.no-object-fit,
+.widget_ct_mission_news_post_list .style-2 .featured-image .fvp-dynamic.post-thumbnail > img.no-object-fit,
 .more-from-category .featured-image > img.no-object-fit,
-.more-from-category .featured-image > a > img.no-object-fit {
+.more-from-category .featured-image > a > img.no-object-fit,
+.more-from-category .featured-image .fvp-dynamic.post-thumbnail > img.no-object-fit {
   min-width: 0;
   min-height: 0;
   max-width: 100%;
@@ -2410,6 +2420,13 @@ a img {
   -webkit-transform: translateX(50%) translateY(-50%);
   -ms-transform: translateX(50%) translateY(-50%);
   transform: translateX(50%) translateY(-50%);
+}
+.layout-double .double .featured-image .fvp-dynamic.post-thumbnail,
+.layout-rows .rows .featured-image .fvp-dynamic.post-thumbnail,
+.layout-rows-excerpt .rows-excerpt .featured-image .fvp-dynamic.post-thumbnail,
+.widget_ct_mission_news_post_list .style-2 .featured-image .fvp-dynamic.post-thumbnail,
+.more-from-category .featured-image .fvp-dynamic.post-thumbnail {
+  position: static;
 }
 
 .search-box h1 {
