--- a/sass/editor_style.scss
+++ b/sass/editor_style.scss
@@ -104,6 +104,7 @@ blockquote {
 hr {
   margin: $baseline-height 0;
 }
+
 /* Table styles */
 table {
   border-spacing: 0;
@@ -113,7 +114,29 @@ table {
 td,
 th {
   padding: $baseline-height / 2;
-  border: solid 1px $color-gray-40;
+  border: solid 1px $color-gray-86;
+}
+.wp-block-table {
+  margin: 0;
+
+  thead,
+  tfoot {
+    background: $color-gray-95;
+  }
+  td,
+  th {
+    border-color: $color-gray-86;
+  }
+}
+.wp-block-table.is-style-stripes {
+
+  thead {
+    background: none;
+  }
+  td,
+  th {
+    border-color: $color-gray-86;
+  }
 }
 
 /* Images */
